# Agentic_Development

./: README.md
Get-Shit-Done/: README.md
Kotlin_Java_code_QA_skill/: README.md
Reiseregning-automatisering/: README.md
claude-automation/: .gitignore  README.md
claude-automation/directives/: norsk_nyhetsoppsummering.md
claude-automation/execution/: nyheter.py  oppsummer_nyheter.py  scrape_norsk_nyheter.py
google-workspace-cli/: README.MD  skills-lock.json
reiseregning-demo/: .env.example  .gitignore  info.md  pyproject.toml
reiseregning-demo/expense/: cli.py  config.py  extractor.py  models.py  storage.py  validator.py
reiseregning-demo/tests/: test_cli.py  test_extractor.py  test_storage.py  test_validator.py
teacher-assistent/: claude.md  claude.template  index.html  package.json  prompt.md  server.js
teacher-assistent/.claude/: gsd-file-manifest.json
teacher-assistent/api/: chat.js
